<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_channel_id">zip_download</string>
    <string name="notification_channel_name">Download</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download"> Download </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_icon">Download Icon</string>
    <string name="first_option">Glide - ImageLoading Library by BumpTech</string>
    <string name="second_option">LoadingApp - Current repository by Udacity</string>
    <string name="third_option">Retrofit - Type-safe HTTP client for Android and java by Square, Inc</string>
    <string name="url">Url</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
</resources>
